--- a/src/styles/MastodonSection.css
+++ b/src/styles/MastodonSection.css
@@ -13,7 +13,7 @@
 
 
 div.mt-body {
-  height: 50vh;
+  height: 20vh;
   padding: 0px 16px 16px 16px;
 }
 
